--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,20 @@
 {
-    "name": "byjg/singleton-pattern",
-    "version": "1.0.1",
-    "description": "A lightweight PHP implementation of the Design Pattern Singleton using trait.",
-    "authors": [
-        {
-            "name": "João Gilberto Magalhães",
-            "email": "joao@byjg.com.br"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "ByJG\\DesignPattern\\": "src/"
-        }
-    },
-    "require": {}, 
-    "license": "MIT"
+  "name": "byjg/singleton-pattern",
+  "description": "A lightweight PHP implementation of the Design Pattern Singleton using trait.",
+  "authors": [
+    {
+      "name": "João Gilberto Magalhães",
+      "email": "joao@byjg.com.br"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "ByJG\\DesignPattern\\": "src/"
+    }
+  },
+  "require": {},
+  "require-dev": {
+    "phpunit/phpunit": ">5.7"
+  },
+  "license": "MIT"
 }
