--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - unzip sonar-scanner-cli-$SONARSCANNER_VERSION-linux.zip
   - composer install
 
-script: 
+script:
   - vendor/bin/phpunit --coverage-clover phpunit.coverage.xml --log-junit phpunit.report.xml
-  - sonar-scanner-$SONARSCANNER_VERSION-linux/bin/sonar-scanner -Dsonar.login=$SONAR_LOGIN
+  - sonar-scanner-$SONARSCANNER_VERSION-linux/bin/sonar-scanner -Dsonar.login=$SONAR_LOGIN -Dsonar.branch.name=$TRAVIS_BRANCH -Dsonar.branch.target=master
 
