--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   },
   "require": {},
   "require-dev": {
-    "phpunit/phpunit": ">5.7"
+    "phpunit/phpunit": "5.7.*|7.4.*"
   },
   "license": "MIT"
 }
