--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
       "ByJG\\DesignPattern\\": "src/"
     }
   },
-  "require": {},
+  "require": {
+    "php": ">=7.4"
+  },
   "require-dev": {
     "phpunit/phpunit": "5.7.*|7.4.*|^9.5"
   },
