--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,16 @@
       "ByJG\\DesignPattern\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+      }
+  },
   "require": {
-    "php": ">=7.4"
+    "php": ">=8.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.7.*|7.4.*|^9.5"
+    "phpunit/phpunit": "^9.6"
   },
   "license": "MIT"
 }
