--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "php": ">=8.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.6"
+    "phpunit/phpunit": "^9.6",
+    "vimeo/psalm": "^5.9"
   },
   "license": "MIT"
 }
