--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
       }
   },
   "require": {
-    "php": ">=8.1"
+    "php": ">=8.1 <8.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.6",
