--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
       }
   },
   "require": {
-    "php": ">=8.1 <8.4"
+    "php": ">=8.1 <8.5"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.6",
-    "vimeo/psalm": "^5.9"
+    "phpunit/phpunit": "^10.5|^11.5",
+    "vimeo/psalm": "^5.9|^6.2"
   },
   "license": "MIT"
 }
