--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,9 @@
     "phpunit/phpunit": "^10.5|^11.5",
     "vimeo/psalm": "^5.9|^6.2"
   },
+  "scripts": {
+    "test": "vendor/bin/phpunit",
+    "psalm": "vendor/bin/psalm"
+  },
   "license": "MIT"
 }
