--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,17 @@
       }
   },
   "require": {
-    "php": ">=8.1 <8.5"
+    "php": ">=8.3 <8.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.5|^11.5",
-    "vimeo/psalm": "^5.9|^6.2"
+    "phpunit/phpunit": "^9.6|^11.5",
+    "vimeo/psalm": "^5.9|^6.13"
   },
   "scripts": {
     "test": "vendor/bin/phpunit",
-    "psalm": "vendor/bin/psalm"
+    "psalm": "vendor/bin/psalm --threads=1"
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "license": "MIT"
 }
